--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,1 +1,7 @@
-Hello world
+{% extends "base/base.html" %}
+<div></div>
+{% block title %} Home {% endblock title %}
+<div></div>
+{% block content %}
+<h1>Hello world</h1>
+{% endblock content %}
