--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -2,6 +2,4 @@
 <div></div>
 {% block title %} Home {% endblock title %}
 <div></div>
-{% block content %}
-<h1>Hello world</h1>
-{% endblock content %}
+{% block content %} {% include "base/navbar.html" %} {% endblock content %}
