--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -2,4 +2,10 @@
 <div></div>
 {% block title %} Home {% endblock title %}
 <div></div>
-{% block content %} {% include "base/navbar.html" %} {% endblock content %}
+{% block content %}
+<div></div>
+{% include "base/navbar.html" %}
+<div></div>
+{% include "./components/splash.html" %}
+<div></div>
+{% endblock content %}
